Probando la info de las TABS en cards

--- a/sass/materialize.css
+++ b/sass/materialize.css
@@ -6804,7 +6804,10 @@ nav {
   -webkit-clip-path: circle(50%, 50%, 50%); */
   z-index: -1;
   transition: all .5s ease;
-  background-color: #eceff1; }
+  background-color: #eceff1;
+  background-image: url("../imagenes/background-multi-1-blur.jpg");
+  opacity: 1;
+  backdrop-filter: blur(5px); }
 
 .scrollText {
   height: 470px;
