agregado el tint y shaded al blured-bg

--- a/sass/components/_custom.scss
+++ b/sass/components/_custom.scss
@@ -279,6 +279,12 @@ nav {
   background-image: url("../imagenes/background-multi-1-blur.jpg");
   opacity: 1;
   backdrop-filter: blur(5px);
+  &.tinted{
+    background-image:(linear-gradient(0deg, rgba(255,255,255,.2),rgba(255,255,255,.2)),url(../imagenes/background-multi-1-blur.jpg));
+  }
+  &.shaded{
+    background-image:(linear-gradient(0deg, rgba(0,0,0,.2),rgba(0,0,0,.2)),url(../imagenes/background-multi-1-blur.jpg));
+  }
 }
 
 
