--- a/sass/materialize.css
+++ b/sass/materialize.css
@@ -6808,6 +6808,10 @@ nav {
   background-image: url("../imagenes/background-multi-1-blur.jpg");
   opacity: 1;
   backdrop-filter: blur(5px); }
+  .element-2-change2.tinted {
+    background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url(../imagenes/background-multi-1-blur.jpg); }
+  .element-2-change2.shaded {
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../imagenes/background-multi-1-blur.jpg); }
 
 .scrollText {
   height: 470px;
