--- a/sass/components/_custom.scss
+++ b/sass/components/_custom.scss
@@ -2,6 +2,11 @@ html, body {
     height:100%;
     padding:0;
     margin:0;
+  background: url('../imagenes/background-multi-1.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
  
 main {
@@ -28,7 +33,8 @@ nav {
 	position: relative;
     top: 0;
     transition: background-color .3s, opacity .2s, visibility 0s;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+    //box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+    box-shadow: none;
     z-index: 10;
 	.nav-background {
     overflow: hidden;
@@ -193,13 +199,19 @@ nav {
 }
 
 .background {
-    background:url('../imagenes/background-multi-1.jpg');
-    position: relative;
-    width: 100%;
+
+    background:url('../imagenes/background-multi-1.jpg') no-repeat center center fixed;;
+    //position: relative;
+    //width: 100%;
+    background-size: cover;
+  //margin: 0 auto;
+  //width: 70%;
+  //max-width: 1280px;
+ z-index: -3;
 }
 
 .layer {
-    background-color: rgba(25, 33, 36, .2);
+    background-color: rgba(25, 33, 36, .1);
     position: absolute;
     top: 0;
     left: 0;
@@ -232,7 +244,7 @@ nav {
  /* shape-inside: circle(50%, 50%, 50%);
   -webkit-clip-path: circle(50%, 50%, 50%); */
   transition: all .5s ease;     
-  z-index: -1;
+  z-index: -2;
 }
 .element-1-change2 {
   shape-inside: polygon(0 0,  0 0, 0 100%, 0 100%);
@@ -240,7 +252,7 @@ nav {
   /* shape-inside: circle(50%, 50%, 50%);
    -webkit-clip-path: circle(50%, 50%, 50%); */
   transition: all .5s ease;
-  z-index: -1;
+  z-index: -2;
 }
 
 .element-2 {
@@ -264,26 +276,26 @@ nav {
     -webkit-clip-path: polygon(100% 0, 41.4% 0, 41.4% 100%, 100% 100%);
     /* shape-inside: circle(50%, 50%, 50%);
     -webkit-clip-path: circle(50%, 50%, 50%); */
-    z-index: -1;
+    z-index: -2;
     transition: all .5s ease;       
     background-color: #eceff1; 
 }
 .element-2-change2 {
-  shape-inside: polygon(100% 0,  0 0, 0 100%, 100% 100%);
-  -webkit-clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+  shape-inside: polygon(100% 0,  100% 0, 100% 100%, 100% 100%);
+  -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
   /* shape-inside: circle(50%, 50%, 50%);
   -webkit-clip-path: circle(50%, 50%, 50%); */
-  z-index: -1;
+  z-index: -2;
   transition: all .5s ease;
-  background-color: #eceff1;
-  background-image: url("../imagenes/background-multi-1-blur.jpg");
-  opacity: 1;
+  //background-color: #eceff1;
+  //background-image: url("../imagenes/background-multi-1-blur.jpg");
+  opacity: 0;
   backdrop-filter: blur(5px);
   &.tinted{
-    background-image:(linear-gradient(0deg, rgba(255,255,255,.2),rgba(255,255,255,.2)),url(../imagenes/background-multi-1-blur.jpg));
+    //background-image:(linear-gradient(0deg, rgba(255,255,255,.2),rgba(255,255,255,.2)),url(../imagenes/background-multi-1-blur.jpg));
   }
   &.shaded{
-    background-image:(linear-gradient(0deg, rgba(0,0,0,.2),rgba(0,0,0,.2)),url(../imagenes/background-multi-1-blur.jpg));
+    //background-image:(linear-gradient(0deg, rgba(0,0,0,.2),rgba(0,0,0,.2)),url(../imagenes/background-multi-1-blur.jpg));
   }
 }
 
