--- a/sass/materialize.css
+++ b/sass/materialize.css
@@ -6615,7 +6615,12 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 html, body {
   height: 100%;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  background: url("../imagenes/background-multi-1.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
 
 main {
   flex: 1 0 auto; }
@@ -6624,7 +6629,7 @@ nav {
   position: relative;
   top: 0;
   transition: background-color .3s, opacity .2s, visibility 0s;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: none;
   z-index: 10; }
   nav .nav-header {
     clear: both;
@@ -6730,12 +6735,12 @@ nav {
       background: linear-gradient(-10deg, #37474f 0%, #37474f 20%, transparent 20.01%); } }
 
 .background {
-  background: url("../imagenes/background-multi-1.jpg");
-  position: relative;
-  width: 100%; }
+  background: url("../imagenes/background-multi-1.jpg") no-repeat center center fixed;
+  background-size: cover;
+  z-index: -3; }
 
 .layer {
-  background-color: rgba(25, 33, 36, 0.2);
+  background-color: rgba(25, 33, 36, 0.1);
   position: absolute;
   top: 0;
   left: 0;
@@ -6764,7 +6769,7 @@ nav {
   /* shape-inside: circle(50%, 50%, 50%);
    -webkit-clip-path: circle(50%, 50%, 50%); */
   transition: all .5s ease;
-  z-index: -1; }
+  z-index: -2; }
 
 .element-1-change2 {
   shape-inside: polygon(0 0, 0 0, 0 100%, 0 100%);
@@ -6772,7 +6777,7 @@ nav {
   /* shape-inside: circle(50%, 50%, 50%);
    -webkit-clip-path: circle(50%, 50%, 50%); */
   transition: all .5s ease;
-  z-index: -1; }
+  z-index: -2; }
 
 .element-2 {
   position: absolute;
@@ -6793,25 +6798,19 @@ nav {
   -webkit-clip-path: polygon(100% 0, 41.4% 0, 41.4% 100%, 100% 100%);
   /* shape-inside: circle(50%, 50%, 50%);
   -webkit-clip-path: circle(50%, 50%, 50%); */
-  z-index: -1;
+  z-index: -2;
   transition: all .5s ease;
   background-color: #eceff1; }
 
 .element-2-change2 {
-  shape-inside: polygon(100% 0, 0 0, 0 100%, 100% 100%);
-  -webkit-clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+  shape-inside: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+  -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
   /* shape-inside: circle(50%, 50%, 50%);
   -webkit-clip-path: circle(50%, 50%, 50%); */
-  z-index: -1;
+  z-index: -2;
   transition: all .5s ease;
-  background-color: #eceff1;
-  background-image: url("../imagenes/background-multi-1-blur.jpg");
-  opacity: 1;
+  opacity: 0;
   backdrop-filter: blur(5px); }
-  .element-2-change2.tinted {
-    background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url(../imagenes/background-multi-1-blur.jpg); }
-  .element-2-change2.shaded {
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../imagenes/background-multi-1-blur.jpg); }
 
 .scrollText {
   height: 470px;
